# pkmnFinder

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
data/: species_names.json
pokefinder/: __init__.py
pokefinder/automation/: actions.py  soft_reset.py  wild_hunt.py
pokefinder/emulator/: __init__.py  buttons.py  core.py  state.py
pokefinder/game_state/: __init__.py  battle.py  encounter.py  player.py
pokefinder/games/: base.py  emerald.py  firered_leafgreen.py  ruby_sapphire.py
pokefinder/games/symbols/: pokeruby.sym  pokesapphire.sym
pokefinder/gui/: app.py  hunt_config_panel.py  instance_card.py  instance_grid.py  main_window.py
pokefinder/hunt/: __init__.py  config.py  coordinator.py  instance.py
pokefinder/memory/: reader.py  symbols.py
pokefinder/pokemon/: __init__.py  decoder.py  shiny.py  species.py  structs.py
tests/: test_pokemon_decoder.py
