[project]
name = "pokemon-finder"
version = "0.1.0"
description = "Autonomous GBA Pokemon shiny hunter with multi-instance support"
requires-python = ">=3.11"
dependencies = [
    # mgba installed separately — see README for platform-specific instructions
    "cached-property>=1.5.2",  # runtime dep of mgba when built from source
    "PyQt6>=6.6.0",
    "rich>=13.5.0",
    "cffi>=1.17.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
